// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Modal > can configure a wider max width 1`] = `
<div
  aria-label="Alert Modal"
  aria-modal="true"
  class="sc-cwHptR knvQFR ReactModal__Content _"
  data-testid="modal"
  role="alertdialog"
  tabindex="-1"
>
  <div
    class="sc-dLMFU ggbOHV"
  >
    Do you want to do the thing?
  </div>
</div>
`;

exports[`Modal > can configure fullscreen 1`] = `
<div
  aria-label="Alert Modal"
  aria-modal="true"
  class="sc-cwHptR dkTQmZ ReactModal__Content _"
  data-testid="modal"
  role="alertdialog"
  tabindex="-1"
>
  <div
    class="sc-dLMFU jCxQay"
  >
    Do you want to do the thing?
  </div>
</div>
`;
